# perg

./: Cargo.toml  README.md
bolg/: lib.rs
crates/bolg/: Cargo.toml
crates/bolg/src/: lib.rs
crates/perg/: Cargo.toml
crates/perg/input/: random.txt
crates/perg/src/: main.rs  misc.rs  nfa.rs  re.rs
src/: main.rs  nfa.rs  re.rs
test_files/nested/: f.cpp  f.h
