[package]
name = "perg"
version = "0.1.0"
authors = ["Anav <igormotyka6@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"    # error handling
bytes = "1.3.0"      # helps manage buffers
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
thiserror = "1.0.38" # error handling
